Fix banner image alignment on large displays, add width limiter for large displays

--- a/src/assets/styles/6.components/pages/front-page/primary-banner.scss
+++ b/src/assets/styles/6.components/pages/front-page/primary-banner.scss
@@ -5,6 +5,9 @@
 
   &--bg {
     @include backgroundImage;
+    max-width: 2560px;
+    margin-left: auto;
+    margin-right: auto;
   }
 
   &__gradient {
